fixed order of post info to look better on mobile.

--- a/src/assets/scss/content.scss
+++ b/src/assets/scss/content.scss
@@ -51,10 +51,15 @@
 
 	.header-container {
 		display: flex;
-		flex-direction: column-reverse;
+		flex-direction: column;
+
+		#content {
+			order: 1;
+		}
 	}
 
 	.post-links {
+		order: 3;
 		margin-top: 3rem;
 		height: 5rem;
 
@@ -72,6 +77,7 @@
 	}
 
 	.post-info {
+		order: 2;
 		display: flex;
 		align-items: flex-start;
 		justify-content: space-between;
@@ -137,6 +143,17 @@
 		padding-top: 0.5rem;
 	}
 }
+@media screen and (min-width: 900px) {
+	#post-container {
+		padding: 3rem;
+	}
+
+	.content-container {
+		padding: 0;
+		margin: 0;
+	}
+}
+
 @media screen and (min-width: 1200px) {
 	#post-container {
 		height: auto;
@@ -162,6 +179,7 @@
 		}
 
 		.post-info {
+			order: 1;
 			width: 10%;
 			flex-direction: column;
 			align-items: flex-start;
@@ -184,6 +202,7 @@
 			}
 		}
 		.post-links {
+			padding-left: 7rem;
 			width: 100%;
 			height: auto;
 		}
